@@ -44,6 +44,7 @@ Option added to disable review stars for certain post type - CHANGED
 Fix issue for plugin installation via WP-CLI - FIXED
 Sao Tome and Principe and South Sudan countries added to DB list - CHANGED
 GD Tools> reload countries table tool added to update new countries - ADDED
+Detail page previous and next links broken if WPML is active - FIXED
 
 v1.6.15
 Google Services API can conflict with newer version of the Google Service Class - UPDATED
